优化AI策略和重构上贡回贡流程
1. AI领出棒子/滚子时不再包含K（分牌），仅用A
2. AI多牌跟牌时保留A不作为填充牌浪费
3. MediumAI根据对手缺门信息选择更大的主牌毙牌（如2）
4. 上贡回贡流程移到发牌后、叫主前执行
5. 用户作为接收方时可以选择回贡哪张牌
6. GameEngine新增step-by-step进贡方法

Co-authored-by: unknowIfGuestInDream <57802425+unknowIfGuestInDream@users.noreply.github.com>